# PinkRabbitMQ

./: CMakeLists.txt  MANIFEST.XML  PinkRabbitMQ.files  PinkRabbitMQ.includes
NativeAPI/: CAddInNative.cpp  CAddInNative.h  CMakeLists.txt  RabbitMQClient.cpp  RabbitMQClient.h  Utils.cpp  Utils.h  cutf.cpp  cutf.h
cmake/: FindPoco.cmake  Findamqpcpp.cmake
